--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-connect": "~0.5.0",
     "grunt-contrib-jshint": "~0.7.2",
-    "grunt-contrib-qunit": "~0.3.0"
+    "grunt-contrib-qunit": "~0.3.0",
     "grunt-contrib-uglify": "~0.2.7",
-    "grunt-recess": "~0.4.0",
+    "grunt-recess": "~0.4.0"
   }
 }
