--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "grunt-contrib-qunit": "~0.3.0",
     "grunt-contrib-uglify": "~0.2.7",
     "grunt-recess": "~0.4.0"
+  },
+  "scripts": {
+    "test": "grunt"
   }
 }
