--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,9 @@
     "guide"
   ],
   "license": "LICENSE.txt",
+  "dependencies": {
+    "jquery": "2.0.0",
+  },
   "ignore": [
     "**/.*",
     "node_modules",
