--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,7 @@
   ],
   "license": "LICENSE.txt",
   "dependencies": {
-    "jquery": "2.0.0",
+    "jquery": "2.0.0"
   },
   "ignore": [
     "**/.*",
