--- a/bower.json
+++ b/bower.json
@@ -1,18 +1,20 @@
 {
   "name": "pageguide",
-  "version": "1.3.1",
+  "version": "1.3.2",
   "homepage": "https://github.com/tracelytics/pageguide",
   "authors": [
-    "Ari Rizzitano <arizzitano@appneta.com>",
-    "Brian Flemming <brianfleming@gmail.com>",
+    "Ari Rizzitano <arizzitano@gmail.com>",
+    "Brian Fleming <brianfleming@gmail.com>",
     "Dan Riti <dmriti@gmail.com>"
   ],
-  "description": "An interactive guide for web page element using jQuery and CSS3",
+  "description": "An interactive guide for web page elements using jQuery and CSS3",
   "main": "js/pageguide.js",
   "keywords": [
     "interactive",
     "web",
-    "guide"
+    "guide",
+    "contextual help",
+    "onboarding"
   ],
   "license": "LICENSE.txt",
   "dependencies": {
