--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "pageguide",
   "author": "Appneta",
-  "version": "1.3.1",
-  "description": "An interactive guide for web page element using jQuery and CSS3",
+  "version": "1.3.2",
+  "description": "An interactive guide for web page elements using jQuery and CSS3",
   "repository": {
     "type": "git",
     "url": "git://github.com/tracelytics/pageguide.git"
