--- a/bower.json
+++ b/bower.json
@@ -1,13 +1,13 @@
 {
-  "name": "pageguide",
-  "version": "1.3.2",
-  "homepage": "https://github.com/tracelytics/pageguide",
+  "name": "pageguide.iframe",
+  "version": "1.3.3",
+  "homepage": "https://github.com/oceanmountain/pageguide",
   "authors": [
     "Ari Rizzitano <arizzitano@gmail.com>",
     "Brian Fleming <brianfleming@gmail.com>",
     "Dan Riti <dmriti@gmail.com>"
   ],
-  "description": "An interactive guide for web page elements using jQuery and CSS3",
+  "description": "An interactive guide for web page elements using jQuery and CSS3. Now with support for iFrames",
   "main": "js/pageguide.js",
   "keywords": [
     "interactive",
